@@ -1,3 +1,4 @@
+const Op = require('sequelize').Op
 const CustomerSchema = require('../../utils/sequelize').Customer
 
 const Customer = () => {}
@@ -13,6 +14,19 @@ Customer.getCustomerById = async (customerId) => {
   return CustomerSchema.findOne({
     where: { id: customerId }
   })
+}
+
+Customer.updateCustomer = async (customerId, customerBody) => {
+  return CustomerSchema.update(
+    {
+      name: customerBody.name,
+      documentNumber: customerBody.documentNumber,
+      email: customerBody.email
+    },
+    {
+      where: { id: { [Op.eq]: customerId } }
+    }
+  )
 }
 
 module.exports = Customer
