@@ -6,6 +6,7 @@ and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.
 
 ## [Unreleased]
 ### Added
+- update customer information
 - get customer information
 
 ## [1.0.0] - 2018-07-15
